--- a/package.json
+++ b/package.json
@@ -16,5 +16,10 @@
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "@types/node": "20.2.3",
+    "@types/react": "18.2.6",
+    "typescript": "5.0.4"
   }
 }
